SQOOP-1778: Sqoop2: Increase default memory allocations for tests
(Jarek Jarcec Cecho via Abraham Elmahrek)